infrastructure/kubernetes/baggage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baggage-service
  namespace: aerolink
  labels:
    app: baggage-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baggage-service
  template:
    metadata:
      labels:
        app: baggage-service
    spec:
      containers:
      - name: baggage-service
        image: 146697354183.dkr.ecr.us-east-1.amazonaws.com/dev-aerolink-baggage-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8005
        livenessProbe:
          httpGet:
            path: /health
            port: 8005
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8005
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: baggage-service
  namespace: aerolink
spec:
  selector:
    app: baggage-service
  ports:
    - protocol: TCP
      port: 8005
      targetPort: 8005
  type: ClusterIP
