infrastructure/kubernetes/booking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: aerolink
  labels:
    app: booking-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
      - name: booking-service
        image: 146697354183.dkr.ecr.us-east-1.amazonaws.com/dev-aerolink-booking-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8003
        livenessProbe:
          httpGet:
            path: /health
            port: 8003
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8003
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          limits:
            cpu: "200m"
            memory: "128Mi"
          requests:
            cpu: "50m"
            memory: "64Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: aerolink
spec:
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
  type: ClusterIP
