infrastructure/kubernetes/flight-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-service
  namespace: aerolink
  labels:
    app: flight-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flight-service
  template:
    metadata:
      labels:
        app: flight-service
    spec:
      containers:
      - name: flight-service
        image: <AWS_ACCOUNT_ID>.dkr.ecr.us-east-1.amazonaws.com/dev-aerolink-flight-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8002
        livenessProbe:
          httpGet:
            path: /health
            port: 8002
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8002
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: flight-service
  namespace: aerolink
spec:
  selector:
    app: flight-service
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
