infrastructure/kubernetes/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: aerolink
  labels:
    app: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: 146697354183.dkr.ecr.us-east-1.amazonaws.com/dev-aerolink-payment-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8004
        livenessProbe:
          httpGet:
            path: /health
            port: 8004
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8004
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          limits:
            cpu: "200m"
            memory: "128Mi"
          requests:
            cpu: "50m"
            memory: "64Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: aerolink
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 8004
      targetPort: 8004
  type: ClusterIP
