infrastructure/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aerolink-ingress
  namespace: aerolink
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
  - http:
      paths:
      # Routing rule for Frontend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      # Routing rules for microservices
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8001
      - path: /flights
        pathType: Prefix
        backend:
          service:
            name: flight-service
            port:
              number: 8002
      - path: /bookings
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 8003
      - path: /payments
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 8004
      - path: /baggage
        pathType: Prefix
        backend:
          service:
            name: baggage-service
            port:
              number: 8005
      - path: /notifications
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 8006
